Template project commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,40 @@
-# Node.js dependencies
-node_modules/
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Runtime data
-*.log
-*.pid
-*.seed
-*.pid.lock
+# Node modules - don't track dependencies
+node_modules/
 
-# Vite-specific
-dist/
+# Build output - don't track the build artifacts
+dist
+dist-ssr
+
+# Vite specific - temporary files generated during development
 .vite/
 
-# IDE and Editor Settings
-.idea/
-.vscode/
-*.swp
-*~
+# Optional: Ignore any other unnecessary files
+*.local
 
-# Operating System Files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+
+# Operating system specific files
 .DS_Store
 Thumbs.db
 
-# Environment Files
-.env
-.env.local
-.env.*.local
+# IDE/editor specific files (if you're using VSCode or similar)
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Build Output
-build/
+# Optional: Ignore any other unnecessary files
+/assets/          # If you don't want to track images or other static files in the assets folder
