homepage url correction

--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "globals": "^15.13.0",
     "vite": "^6.0.3"
   },
-  "homepage": "https://utasr-ut-autonomous-scale-racing.github.io/website/"
+  "homepage": "https://utasr-ut-autonomous-scale-racing.github.io"
 }
