--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "gh-pages": "^6.2.0",
     "globals": "^15.13.0",
+    "tailwindcss": "^3.4.17",
     "vite": "^6.0.3"
   },
   "homepage": "https://utasr-ut-autonomous-scale-racing.github.io"
