--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.3",
+    "framer-motion": "^12.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
