--- a/package.json
+++ b/package.json
@@ -40,5 +40,6 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.0.3"
   },
-  "homepage": "https://utasrteam.ca"
+    "homepage": "https://utasr-ut-autonomous-scale-racing.github.io"
+
 }
